tests/ui/macros/macro-use-wrong-name.stderr
error: cannot find macro `macro_two` in this scope
  --> $DIR/macro-use-wrong-name.rs:7:5
   |
LL |     macro_two!();
   |     ^^^^^^^^^
   |
  ::: $DIR/auxiliary/two_macros.rs:2:1
   |
LL | macro_rules! macro_one { () => ("one") }
   | ---------------------- similarly named macro `macro_one` defined here
   |
help: a macro with a similar name exists
   |
LL |     macro_one!();
   |     ~~~~~~~~~
help: consider importing this macro
   |
LL + use two_macros::macro_two;
   |

error: aborting due to previous error

